SOCK-20 Add match completed state and change logic